force-app/main/default/objects/Asesor_Banco__c/Asesor_Banco__c.object-meta.xml
<CustomObject>
    <description>Este objeto guarda información  de los actuales y nuevos asesores que se asignaran a una cuenta</description>
    <label>Asesor Banco</label>
    <nameField>
        <label>Nombre de Asesor Banco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asesor Bancos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>