force-app/main/default/objects/Asesor_Banco__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <description>Guarda la agencia del asesor actual</description>
    <inlineHelpText>Guarda la agencia del asesor actual</inlineHelpText>
    <label>Agencia</label>
    <length>60</length>
    <type>Text</type>
</CustomField>