force-app/main/default/objects/Asesor_Banco__c/fields/Codigo_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Asesor__c</fullName>
    <description>Guarda el código del asesor actual</description>
    <inlineHelpText>Guarda el código del asesor actual</inlineHelpText>
    <label>Codigo Asesor</label>
    <length>16</length>
    <type>Text</type>
</CustomField>