force-app/main/default/objects/Asesor_Banco__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <description>Contiene el numero de cuenta del cliente</description>
    <inlineHelpText>Contiene el numero de cuenta del cliente</inlineHelpText>
    <label>Cuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>