force-app/main/default/objects/Asesor_Banco__c/fields/Nombre_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Asesor__c</fullName>
    <description>Guarda el nombre del asesor actual</description>
    <inlineHelpText>Guarda el nombre del asesor actual</inlineHelpText>
    <label>Nombre Asesor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>