force-app/main/default/objects/Asesor_Banco__c/fields/Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente__c</fullName>
    <description>Guarda el nombre de cliente</description>
    <inlineHelpText>Guarda el nombre de cliente</inlineHelpText>
    <label>Nombre Cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>