force-app/main/default/objects/Asesor_Banco__c/fields/Nueva_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Agencia__c</fullName>
    <description>Guarda la agencia del nuevo asesor</description>
    <inlineHelpText>Guarda la agencia del nuevo asesor</inlineHelpText>
    <label>Nueva Agencia</label>
    <length>60</length>
    <type>Text</type>
</CustomField>