force-app/main/default/objects/Asesor_Banco__c/fields/Nuevo_Codigo_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Codigo_Asesor__c</fullName>
    <description>Guarda el código del nuevo asesor</description>
    <inlineHelpText>Guarda el código del nuevo asesor</inlineHelpText>
    <label>Nuevo Codigo Asesor</label>
    <length>16</length>
    <type>Text</type>
</CustomField>