force-app/main/default/objects/Asesor_Banco__c/fields/Nuevo_Nombre_Asesor__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Nombre_Asesor__c</fullName>
    <description>Guarda el nombre del nuevo asesor</description>
    <inlineHelpText>Guarda el nombre del nuevo asesor</inlineHelpText>
    <label>Nuevo Nombre Asesor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>